# get-back

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TLS-TESTING.md  justfile  podman-site.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  skaffold.md  skaffold.yaml  todo.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
clients/: README.md  batch_http_client.py  batch_tcp_client.py  http_client.py  stats_client.py  tcp_client.py  view_openapi.py
east/: connector.yaml  connectors-tls.yaml  connectors.yaml  deploy-tls-backend.sh  deployment-tls.yaml  deployment.yaml  service-tls.yaml
getback/: __init__.py  __main__.py  cli.py  config.py  counter.py  dashboard_server.py  http_server.py  openapi-spec.yaml  tcp_server.py
getback/templates/: dashboard.html
k8s/: README.md  client-cronjob.yaml  client-http-job.yaml  client-load-generator.yaml  client-tcp-job.yaml  deployment.yaml  service.yaml
podman/: README.md  connectors.yaml  listeners.yaml  site.yaml
scripts/: podman-build-push.sh
specs/001-dual-counter/: console-design.md  data-model.md  plan.md  quickstart.md  spec.md  (+2 more)
tests/: conftest.py  test_counter.py  test_dashboard_server.py  test_http_server.py  test_tcp_server.py
west/: connector.yaml  connectors-tls.yaml  connectors.yaml  deploy-tls-backend.sh  deployment-tls.yaml  deployment.yaml  listener.yaml  listeners-tls.yaml  listeners.yaml  service-tls.yaml  service.yaml
(+3 files in other folders)
